# wasmium

./: .gitignore  Cargo.toml  README.md
example-plugin/: example_plugin.wasm  lib.rs
src/: api.rs  lib.rs  sys_functions.rs
src/example-plugin/: example_plugin.wasm
src/native/: host_function.rs  linker_handle.rs  mod.rs  wasm_module.rs
src/wasm/: host_function.rs  memory_handle.rs  mod.rs  wasm_module.rs
src/web/: host_function.rs  memory_handle.rs  mod.rs  wasm_module.rs
