[package]
name = "wasmium"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
crosslog = { git = "https://github.com/DeltaVictrix/crosslog" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = "43.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"